--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.33MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-343.4KB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇫🇷 法国-1.10MB/s(Youtube:不良林), server: 51.38.118.42, port: 817, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-358.2KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇯🇵 日本-2.32MB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-1.73MB/s(Youtube:不良林), server: 38.143.66.20, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇺🇸 美国-822.8KB/s(Youtube:不良林), server: 38.143.66.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-2.18MB/s(Youtube:不良林), server: 38.143.66.20, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-879.2KB/s(Youtube:不良林), server: 38.143.66.20, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇺🇸 美国-1.72MB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇫🇷 法国-656.0KB/s(Youtube:不良林), server: 51.38.118.42, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-605.1KB/s(Youtube:不良林), server: 38.143.66.20, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-1.53MB/s(Youtube:不良林), server: 38.143.66.20, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
   - {name: 🇬🇧 英国-895.6KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇳 中国-1.07MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-214.5KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-278.4KB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-358.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-822.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-879.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇫🇷 法国-656.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-605.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
       - 🇬🇧 英国-895.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-214.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-278.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-358.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-822.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-879.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇫🇷 法国-656.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-605.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
       - 🇬🇧 英国-895.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-214.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-278.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-358.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-822.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-879.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇫🇷 法国-656.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-605.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
       - 🇬🇧 英国-895.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-214.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-278.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-358.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-822.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-879.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇫🇷 法国-656.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-605.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
       - 🇬🇧 英国-895.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-214.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-278.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-358.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-822.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-879.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇫🇷 法国-656.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-605.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
       - 🇬🇧 英国-895.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-214.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-278.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-358.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-822.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-879.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇫🇷 法国-656.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-605.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
       - 🇬🇧 英国-895.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-214.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-278.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-358.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-822.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-879.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇫🇷 法国-656.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-605.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
       - 🇬🇧 英国-895.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-214.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-278.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
