--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-924.6KB/s(Youtube:不良林), server: 51.38.118.42, port: 817, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇫🇷 法国-454.5KB/s(Youtube:不良林), server: 51.38.118.42, port: 818, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇫🇷 法国-371.8KB/s(Youtube:不良林), server: 51.38.118.42, port: 813, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-352.4KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-605.1KB/s(Youtube:不良林), server: 38.143.66.20, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-278.4KB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-4.03MB/s(Youtube:不良林), server: ddns.0318.cyou, port: 12345, type: ss, cipher: chacha20-ietf-poly1305, password: 89ab8225-6873-45e9-b0e8-b8aebbfa9945}
-  - {name: 🇨🇳 中国-235.1KB/s(Youtube:不良林), server: 36.134.156.5, port: 65031, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 🇨🇳 中国-241.7KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-228.1KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-5.76MB/s(Youtube:不良林), server: 80.251.208.30, port: 22223, type: vmess, uuid: 5ce411c8-da98-44f5-ac1b-3b32ccdd8ce7, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /echo, ws-headers: {Host: 80.251.208.30}}
+  - {name: 捷克-637.6KB/s(Youtube:不良林), server: 194.87.99.227, port: 32364, type: vmess, uuid: abd6dc4b-b598-47b8-d392-afba4ec57ff1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 194.87.99.227}}
+  - {name: 🇩🇪 德国-6.06MB/s(Youtube:不良林), server: 147.78.247.12, port: 11188, type: vmess, uuid: 1dda6ae1-d179-405a-8542-0a1fb8328b0e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 147.78.247.12}}
+  - {name: 🇺🇸 美国-858.7KB/s(Youtube:不良林), server: 38.143.66.20, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇦 加拿大-713.4KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-548.0KB/s(Youtube:不良林), server: 129.146.133.157, port: 51009, type: vmess, uuid: 81714cef-9bde-4a08-aa50-d6bc0172d78b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-618.5KB/s(Youtube:不良林), server: 192.161.164.156, port: 40338, type: vmess, uuid: fe20f87d-4e11-4c2a-af6e-5b8bd9927092, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.01MB/s(Youtube:不良林), server: 23.224.152.24, port: 25609, type: vmess, uuid: c9939714-04d7-45f9-dd33-30ec6057239b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.75MB/s(Youtube:不良林), server: 38.59.224.49, port: 40001, type: vmess, uuid: 97cd14b8-4332-40f9-84fc-3fc235354df9, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.39MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-924.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-454.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-371.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-352.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-605.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-278.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-235.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-241.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-228.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.76MB/s(Youtube:不良林)
+      - 捷克-637.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-6.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-858.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-713.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-548.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-618.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-924.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-454.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-371.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-352.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-605.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-278.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-235.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-241.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-228.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.76MB/s(Youtube:不良林)
+      - 捷克-637.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-6.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-858.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-713.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-548.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-618.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-924.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-454.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-371.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-352.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-605.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-278.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-235.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-241.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-228.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.76MB/s(Youtube:不良林)
+      - 捷克-637.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-6.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-858.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-713.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-548.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-618.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-924.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-454.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-371.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-352.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-605.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-278.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-235.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-241.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-228.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.76MB/s(Youtube:不良林)
+      - 捷克-637.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-6.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-858.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-713.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-548.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-618.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-924.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-454.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-371.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-352.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-605.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-278.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-235.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-241.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-228.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.76MB/s(Youtube:不良林)
+      - 捷克-637.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-6.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-858.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-713.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-548.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-618.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-924.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-454.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-371.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-352.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-605.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-278.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-235.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-241.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-228.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.76MB/s(Youtube:不良林)
+      - 捷克-637.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-6.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-858.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-713.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-548.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-618.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-924.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-454.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-371.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-352.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-605.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-278.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-235.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-241.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-228.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.76MB/s(Youtube:不良林)
+      - 捷克-637.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-6.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-858.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-713.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-548.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-618.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
