--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-5.76MB/s(Youtube:不良林), server: 80.251.208.30, port: 22223, type: vmess, uuid: 5ce411c8-da98-44f5-ac1b-3b32ccdd8ce7, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /echo, ws-headers: {Host: 80.251.208.30}}
-  - {name: 捷克-637.6KB/s(Youtube:不良林), server: 194.87.99.227, port: 32364, type: vmess, uuid: abd6dc4b-b598-47b8-d392-afba4ec57ff1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 194.87.99.227}}
-  - {name: 🇩🇪 德国-6.06MB/s(Youtube:不良林), server: 147.78.247.12, port: 11188, type: vmess, uuid: 1dda6ae1-d179-405a-8542-0a1fb8328b0e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 147.78.247.12}}
-  - {name: 🇺🇸 美国-858.7KB/s(Youtube:不良林), server: 38.143.66.20, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇦 加拿大-713.4KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-548.0KB/s(Youtube:不良林), server: 129.146.133.157, port: 51009, type: vmess, uuid: 81714cef-9bde-4a08-aa50-d6bc0172d78b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-618.5KB/s(Youtube:不良林), server: 192.161.164.156, port: 40338, type: vmess, uuid: fe20f87d-4e11-4c2a-af6e-5b8bd9927092, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.01MB/s(Youtube:不良林), server: 23.224.152.24, port: 25609, type: vmess, uuid: c9939714-04d7-45f9-dd33-30ec6057239b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.75MB/s(Youtube:不良林), server: 38.59.224.49, port: 40001, type: vmess, uuid: 97cd14b8-4332-40f9-84fc-3fc235354df9, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.39MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
+  - {name: 🇷🇺 俄罗斯联邦-1.21MB/s(Youtube:不良林), server: 45.8.230.253, port: 852, type: vmess, uuid: 82c73cff-ade4-41a5-a33c-c6f6a7f6f533, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: 45.8.230.253}}
+  - {name: 🇺🇸 美国-1007.9KB/s(Youtube:不良林), server: 38.143.66.20, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇫🇷 法国-249.1KB/s(Youtube:不良林), server: 51.38.118.42, port: 819, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-2.97MB/s(Youtube:不良林), server: 20.89.67.251, port: 80, type: vmess, uuid: 1257774c-2bad-4eaa-8369-456a4571982c, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.89.67.251}}
+  - {name: 🇮🇳 印度-425.2KB/s(Youtube:不良林), server: 140.238.255.240, port: 443, type: vmess, uuid: aaf9f463-876e-4bfd-ed11-1c07ad830092, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 140.238.255.240}}
+  - {name: 阿联酋-1.06MB/s(Youtube:不良林), server: 193.123.67.0, port: 11188, type: vmess, uuid: 280683d0-369c-42e9-be4b-e723a73b7785, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 193.123.67.0}}
+  - {name: 🇺🇸 美国-2.00MB/s(Youtube:不良林), server: 138.2.71.189, port: 11188, type: vmess, uuid: 923f14b3-9131-46a9-ef9b-863e8d026078, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 138.2.71.189}}
+  - {name: 🇺🇸 美国-1.67MB/s(Youtube:不良林), server: 98.126.18.91, port: 50687, type: vmess, uuid: 2d20b0bd-eaaa-45bb-d69d-986a4076832c, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 未知国家-2.39MB/s(Youtube:不良林), server: xiexi.tk, port: 2096, type: vmess, uuid: 37551ca0-8cc3-432f-ca1f-82aba1db3ef9, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: xiexi.tk}}
+  - {name: 🇺🇸 美国-1.74MB/s(Youtube:不良林), server: 64.112.43.180, port: 13674, type: vmess, uuid: f44ce146-2d6d-4e84-dcac-3bdd8689d053, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.76MB/s(Youtube:不良林)
-      - 捷克-637.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-6.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-858.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-713.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-548.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-618.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1007.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-249.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.97MB/s(Youtube:不良林)
+      - 🇮🇳 印度-425.2KB/s(Youtube:不良林)
+      - 阿联酋-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
+      - 未知国家-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-5.76MB/s(Youtube:不良林)
-      - 捷克-637.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-6.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-858.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-713.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-548.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-618.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1007.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-249.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.97MB/s(Youtube:不良林)
+      - 🇮🇳 印度-425.2KB/s(Youtube:不良林)
+      - 阿联酋-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
+      - 未知国家-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.76MB/s(Youtube:不良林)
-      - 捷克-637.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-6.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-858.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-713.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-548.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-618.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1007.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-249.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.97MB/s(Youtube:不良林)
+      - 🇮🇳 印度-425.2KB/s(Youtube:不良林)
+      - 阿联酋-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
+      - 未知国家-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-5.76MB/s(Youtube:不良林)
-      - 捷克-637.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-6.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-858.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-713.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-548.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-618.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1007.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-249.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.97MB/s(Youtube:不良林)
+      - 🇮🇳 印度-425.2KB/s(Youtube:不良林)
+      - 阿联酋-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
+      - 未知国家-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.76MB/s(Youtube:不良林)
-      - 捷克-637.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-6.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-858.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-713.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-548.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-618.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1007.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-249.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.97MB/s(Youtube:不良林)
+      - 🇮🇳 印度-425.2KB/s(Youtube:不良林)
+      - 阿联酋-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
+      - 未知国家-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.76MB/s(Youtube:不良林)
-      - 捷克-637.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-6.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-858.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-713.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-548.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-618.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1007.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-249.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.97MB/s(Youtube:不良林)
+      - 🇮🇳 印度-425.2KB/s(Youtube:不良林)
+      - 阿联酋-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
+      - 未知国家-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.76MB/s(Youtube:不良林)
-      - 捷克-637.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-6.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-858.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-713.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-548.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-618.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1007.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-249.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.97MB/s(Youtube:不良林)
+      - 🇮🇳 印度-425.2KB/s(Youtube:不良林)
+      - 阿联酋-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
+      - 未知国家-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
